Print CSS: Avoid page breaks inside <figure> and <table>

--- a/resources/src/mediawiki.legacy/commonPrint.css
+++ b/resources/src/mediawiki.legacy/commonPrint.css
@@ -84,6 +84,8 @@ pre,
 }
 
 img,
+figure,
+table,
 .wikitable,
 .thumb {
 	/* Pagination */
